Publicar Tweet con imagen

--- a/PlatziTweets/Modules/Home/Cells/TweetTableViewCell.xib
+++ b/PlatziTweets/Modules/Home/Cells/TweetTableViewCell.xib
@@ -38,7 +38,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fgH-mt-cnw">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fgH-mt-cnw">
                                 <rect key="frame" x="0.0" y="260" width="527" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="LOL-w9-mNM"/>
