--- a/PlatziTweets/Modules/Home/Home.storyboard
+++ b/PlatziTweets/Modules/Home/Home.storyboard
@@ -77,7 +77,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="3dl-KH-14H">
-                                <rect key="frame" x="20" y="73" width="335" height="237"/>
+                                <rect key="frame" x="20" y="73" width="335" height="275"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KTr-1g-vcY">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="120"/>
@@ -97,8 +97,18 @@
                                             <action selector="openCameraAction" destination="lru-mD-uRA" eventType="touchUpInside" id="JYe-5p-XVO"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfs-Uw-5xj">
+                                        <rect key="frame" x="0.0" y="190" width="335" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" title="Ver video" image="video.fill" catalog="system">
+                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="openPreviewAction" destination="lru-mD-uRA" eventType="touchUpInside" id="0Vq-8F-oiu"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D1a-fw-sjl">
-                                        <rect key="frame" x="0.0" y="190" width="335" height="47"/>
+                                        <rect key="frame" x="0.0" y="228" width="335" height="47"/>
                                         <color key="backgroundColor" red="0.0" green="0.69019607839999997" blue="0.41960784309999999" alpha="0.51856806506849318" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="47" id="6V5-tk-POU"/>
@@ -112,7 +122,7 @@
                                         </connections>
                                     </button>
                                     <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Sw-aa-nid">
-                                        <rect key="frame" x="0.0" y="237" width="335" height="200"/>
+                                        <rect key="frame" x="0.0" y="275" width="335" height="200"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="200" id="ipP-hl-uBl"/>
                                         </constraints>
@@ -145,6 +155,7 @@
                     <connections>
                         <outlet property="postTextView" destination="KTr-1g-vcY" id="CoU-2I-IaI"/>
                         <outlet property="previewImageView" destination="5Sw-aa-nid" id="MCE-rG-YfZ"/>
+                        <outlet property="videoButton" destination="gfs-Uw-5xj" id="OW9-9u-TCZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dnu-jB-VxA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -172,5 +183,6 @@
     </scenes>
     <resources>
         <image name="bottomImage" width="351.5" height="123"/>
+        <image name="video.fill" catalog="system" width="128" height="82"/>
     </resources>
 </document>
