--- a/PlatziTweets/Modules/Home/Cells/TweetTableViewCell.xib
+++ b/PlatziTweets/Modules/Home/Cells/TweetTableViewCell.xib
@@ -50,6 +50,9 @@
                                 <state key="normal" title="Ver Video" image="video.fill" catalog="system">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="openVideoAction" destination="KGk-i7-Jjw" eventType="touchUpInside" id="naE-s6-A8g"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01/01/01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Fv-83-m85">
                                 <rect key="frame" x="0.0" y="610.5" width="64.5" height="20.5"/>
